--- a/html/exo2.html
+++ b/html/exo2.html
@@ -5,12 +5,10 @@
   <title>Projet JavaScript</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-   <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/litera/bootstrap.min.css" rel="stylesheet" integrity="sha384-D/7uAka7uwterkSxa2LwZR7RJqH2X6jfmhkJ0vFPGUtPyBMF2WMq9S+f9Ik5jJu1" crossorigin="anonymous">
- 
+  <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/litera/bootstrap.min.css" rel="stylesheet" integrity="sha384-D/7uAka7uwterkSxa2LwZR7RJqH2X6jfmhkJ0vFPGUtPyBMF2WMq9S+f9Ik5jJu1" crossorigin="anonymous">
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
-  <script src="../scripts/script_1.js"></script>
+  <script src="../scripts/script_2.js"></script>
 </head>
 
 <body>
@@ -25,8 +23,8 @@
           <li class="nav-item">
             <a class="nav-link" href="../index.html">Présentation</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="exo1.html">Script 1<span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="exo1.html">Script 1</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="exo2.html">Script 2</a>
@@ -51,10 +49,6 @@
     </nav>
   </div>
   
-  <div class="text-center">
-    <p class = "m-5  p-2 border"id="demo" style="width:200px"></p>
-  </div>
-
   <div class="container text-center mt-5">
     <h1>Script 2</h1>
     <h5 class = "text-danger"id="result"></h5>
